<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="8dp"
    android:showDividers="middle"
    android:divider="@drawable/empty_tall_divider"
    android:background="@color/common_google_signin_btn_text_light_default">

    <EditText
        android:id="@+id/username"
        android:hint="@string/input_username"
        android:importantForAutofill="no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textNoSuggestions"
        android:backgroundTint="#E38349"/>

    <EditText
        android:id="@+id/password"
        android:hint="@string/input_password"
        android:importantForAutofill="no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:backgroundTint="#E38349"/>

    <EditText
        android:id="@+id/email"
        android:hint="@string/input_email"
        android:importantForAutofill="no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:backgroundTint="#E38349"/>

    <EditText
        android:id="@+id/phone"
        android:hint="@string/input_phone"
        android:importantForAutofill="no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:backgroundTint="#E38349"/>

    <EditText
        android:id="@+id/address"
        android:hint="@string/input_address"
        android:importantForAutofill="no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:backgroundTint="#E38349"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Spinner
            android:id="@+id/driver_or_rider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown">
        </Spinner>


    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center|bottom">
        <Button
            android:id="@+id/finish_create"
            android:text="@string/finish_create_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center"
            android:backgroundTint="#E38349"/>
    </LinearLayout>

</LinearLayout>