<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/draw_layout"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity"
    tools:openDrawer="start"
    android:orientation="vertical"
    android:background="@color/common_google_signin_btn_text_light_default">


    

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


		<SearchView
	        android:id="@+id/sv_location"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:background="@drawable/bg_round"
	        android:backgroundTint="@color/common_google_signin_btn_text_light"
	        android:iconifiedByDefault="false"
	        android:queryHint="@string/query_start_location" />
	    <SearchView
	        android:id="@+id/sv2_location"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:background="@drawable/bg_round"
	        android:backgroundTint="@color/common_google_signin_btn_text_light"
	        android:iconifiedByDefault="false"
	        android:queryHint="@string/query_end_location" />
	    <fragment
	        android:id="@+id/map"
	        android:name="com.google.android.gms.maps.SupportMapFragment"
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:layout_weight="1"/>


		<FrameLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical">

				<RelativeLayout
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:orientation="horizontal" >


					<TextView
						android:id="@+id/offerDisplay"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_centerInParent="true"
						android:layout_marginLeft="22dp"
						android:text="@string/offer_rider_new_request"
						android:textSize="20dp"
						android:layout_alignParentLeft="true"
						android:visibility="invisible"
						android:backgroundTint="#E38349"/>

					<TextView
						android:id="@+id/tipLabel"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_centerInParent="true"
						android:text="@string/tip_rider_new_request"
						android:textSize="20dp"
						android:layout_toLeftOf="@+id/tipAmount"
						android:visibility="invisible"
						android:backgroundTint="#E38349"/>

					<EditText
						android:id="@+id/tipAmount"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_alignParentRight="true"
						android:layout_centerInParent="true"
						android:layout_marginRight="22dp"
						android:ems="3"
						android:hint="@string/_0_hint_rider_new_request"
						android:inputType="number"
						android:textSize="17dp"
						android:visibility="invisible"
						android:backgroundTint="#E38349"/>

				</RelativeLayout>

				<Button
					android:id="@+id/btnConfirmRequest"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/confirm_request_rider_new_request"
					android:textColor="#FFFFFF"
					android:visibility="invisible"
					android:backgroundTint="#E38349"/>

			</LinearLayout>

			<Button
				android:id="@+id/btnGetFare"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="center_vertical"
				android:padding="22dp"
				android:text="@string/get_fare_rider_new_request"
				android:textColor="#FFFFFF"
				android:backgroundTint="#E38349"/>

		</FrameLayout>
	</LinearLayout>


    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:id="@+id/nav_view"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer_menu"/>



</androidx.drawerlayout.widget.DrawerLayout>